--- a/sfcore/sfcore.vcxproj.filters
+++ b/sfcore/sfcore.vcxproj.filters
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="sf_algorithm.c" />
     <ClCompile Include="sf_file_monitor.c" />
     <ClCompile Include="sf_file_win32.c" />
     <ClCompile Include="sf_glib_key_file.c" />
@@ -22,6 +23,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\sfcore\sf_algorithm.h">
+      <Filter>include\sfcore</Filter>
+    </ClInclude>
     <ClInclude Include="include\sfcore\sf_bool.h">
       <Filter>include\sfcore</Filter>
     </ClInclude>
