Add: modbus functions return the size of the buffer needed modbus_player: format and send modbus messages to serial port

--- a/vs_sln/packages/repositories.config
+++ b/vs_sln/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\grabc\packages.config" />
+  <repository path="..\..\modbus_player\packages.config" />
   <repository path="..\..\sfcore\packages.config" />
   <repository path="..\..\sfio\packages.config" />
-  <repository path="..\..\grabc\packages.config" />
 </repositories>
